--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -3,6 +3,12 @@
     <file source-language="en" datatype="plaintext" original="messages" product-name="materialize">
         <header/>
         <body>
+            <trans-unit id="flux.default">
+              <source>Default</source>
+            </trans-unit>
+            <trans-unit id="flux.dynamic">
+              <source>Dynamic</source>
+            </trans-unit>
             <trans-unit id="flux.container">
               <source>Container</source>
             </trans-unit>
